# tinderbot

./: .gitignore  README.md  api.py  beauty_predict.py  bot.py  person.py  pyproject.toml  requirements.txt
