[tool.poetry]
name = "beauty_predict"
version = "0.1.0"
description = ""
authors = ["Azamat Galimzhanov <azamat@galimzhanov.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
numpy = "^1.17"
keras = "^2.3"
opencv-python = "^4.1"
tensorflow = "=1.14"
dlib = "^19.18"
requests = "^2.22"
geopy = "^1.20"
pillow = "^6.2"

[tool.poetry.dev-dependencies]
ipython = "^7.9"
jupyter = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
